# phpn

./: .gitignore  LICENSE  README.md  composer.json
.github/workflows/: release.yml
config/: phpn.php
docs/: ICONS.md
examples/laravel-app/: README.md
examples/laravel-app/app/Http/Controllers/: DashboardController.php  ProjectController.php  TagController.php  TaskController.php
examples/laravel-app/app/Models/: Project.php  Tag.php  Task.php
examples/laravel-app/bootstrap/: app.php
examples/laravel-app/database/migrations/: 2024_01_01_000001_create_projects_table.php  2024_01_01_000002_create_tasks_table.php  2024_01_01_000003_create_tags_table.php
examples/laravel-app/database/seeders/: DatabaseSeeder.php
examples/laravel-app/resources/views/: dashboard.blade.php
examples/laravel-app/resources/views/layouts/: app.blade.php
examples/laravel-app/resources/views/projects/: create.blade.php  edit.blade.php  index.blade.php  show.blade.php
examples/laravel-app/resources/views/tags/: index.blade.php
examples/laravel-app/resources/views/tasks/: card.blade.php
examples/laravel-app/routes/: web.php
examples/test-app/public/: about.php  features.php  files.php  index.php
examples/test-app/views/: about.php  features.php  files.php  home.php  layout.php
native/: create-release.sh
native/linux/: CMakeLists.txt  build-php.sh  build.sh  bundle-app.sh  main.c  phpn_app.c  phpn_app.h  phpn_window.c  phpn_window.c_bak  phpn_window.h
native/macos/: CMakeLists.txt  PHPNAppDelegate.h  PHPNAppDelegate.m  PHPNWindow.h  PHPNWindow.m  build.sh  bundle-app.sh  compile-php.sh  main.m
native/shared/: bridge.c  bridge.h  php_runtime.c  php_runtime.h
src/Laravel/: PHPNServiceProvider.php
src/Laravel/Commands/: DesktopBundleCommand.php  DesktopServeCommand.php
stubs/: laravel-desktop.php
